# Evolution-of-Todo

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  tmpclaude-a31c-cwd
.claude/: settings.local.json
.claude/agents/: architect-agent.md  chatbot-ux-agent.md  console-app-agent.md  constitution-agent.md  fullstack-web-agent.md  implementation-agent.md  mcp-expert-agent.md  planning-agent.md  specify-agent.md  task-breakdown-agent.md
.claude/skills/: backend-development.md  chat-context-persistence.md  code-review-checklist.md  console-app-agent.md  console-app-overview.md  constitution-agent.md  fullstack-web-agent.md  implementation-agent.md  mcp-task-operations.md  nextjs16-development.md  planning-agent.md  proactive-task-guard.md  specify-agent.md  task-breakdown-agent.md
.specify/memory/: constitution.md
history/adr/: adr-001-frontend-technology-stack.md  adr-002-backend-technology-stack.md  adr-003-authentication-and-authorization-strategy.md  adr-004-data-architecture-and-database-strategy.md  adr-005-api-design-and-architecture.md  adr-006-ai-integration-with-cohere-via-openai-sdk.md  adr-007-mcp-server-architecture-for-ai-tools.md  adr-008-stateless-chat-architecture-with-database-persistence.md
phase1/: CLAUDE.md  README.md  TESTING.md  requirements.txt
phase1/src/: __init__.py  main.py  todo_manager.py  utils.py
phase3_ai_engine/: README.md  ai_client.py  main.py  mcp_server.py
src/: task.py
tests/: test_todo_manager.py
todo-phase2/: .env.example  CLAUDE.md  README.md  docker-compose.yml  integration_test.py
(+109 files in other folders)
